litmask/tests/compile/mask_format_duplicate_named_arg.stderr
error: mask_format! duplicate-name: named argument `x` appears more than once
  --> tests/compile/mask_format_duplicate_named_arg.rs:10:40
   |
10 |     let _ = mask_format!("{x}", x = 1, x = 2);
   |                                        ^
